5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1828_1653.log
== TEST (2019-06-12 14:32:21) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
z = zeros(5,dtype=int)
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0

for i in p:
	if (p[i] == 'BR'):
		BR = BR + 1
	elif (p[i] == 'AR'):
		AR = AR + 1
	elif (p[i] =='UY'):
		UY = UY + 1
	elif (p[i] == 'CL'):
		CL = CL + 1
	elif (p[i] =='CO'):
		CO = CO + 1
	i+=i
	t = [AR, BR, CL, CO, UY]
print(max(t))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:54) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
z = zeros(5,dtype=int)
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0

print(p)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:15) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',').replace("'",'')
z = zeros(5,dtype=int)
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0

print(p)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:46) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0

print(a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:12) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
while (i < size(a)):
	if(a[i] == BR)


	
-- ERROR:
File "XXXX", line 11
    if(a[i] == BR)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:17) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
while (i < size(a)):
	if(a[i] == BR):


	
-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:31) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
while (i < size(a)):
	if(a[i] == BR):
		BR = BR + 1
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:03) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
t = []
while (i < size(a)):
	if(a[i] == "BR"):
		BR = BR + 1
	elif(a[i] == "AR"):
		AR = AR + 1
	elif(a[i] == "UY"):
		UY = UY + 1
	elif(a[i] == "CL"):
		CL = CL + 1
	elif(a[i] == "CO"):
		CO = CO + 1
	i = i + 1
	t.append(BR,AR,CL,CO,UY)
print(max(t))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:04) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
t = []
while (i < size(a)):
	if(a[i] == "BR"):
		BR = BR + 1
	elif(a[i] == "AR"):
		AR = AR + 1
	elif(a[i] == "UY"):
		UY = UY + 1
	elif(a[i] == "CL"):
		CL = CL + 1
	elif(a[i] == "CO"):
		CO = CO + 1
	i = i + 1
b = [BR,AR,CL,CO,UY]
print(max(b))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:33) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
t = []
while (i < size(a)):
	if(a[i] == "BR"):
		BR = BR + 1
	elif(a[i] == "AR"):
		AR = AR + 1
	elif(a[i] == "UY"):
		UY = UY + 1
	elif(a[i] == "CL"):
		CL = CL + 1
	elif(a[i] == "CO"):
		CO = CO + 1
	i = i + 1
   b = [BR,AR,CL,CO,UY]
print(max(b))

	
-- ERROR:
File "XXXX", line 23
    b = [BR,AR,CL,CO,UY]
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:04) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
t = []
while (i < size(a)):
	if(a[i] == "BR"):
		BR = BR + 1
	elif(a[i] == "AR"):
		AR = AR + 1
	elif(a[i] == "UY"):
		UY = UY + 1
	elif(a[i] == "CL"):
		CL = CL + 1
	elif(a[i] == "CO"):
		CO = CO + 1
	

   b = [BR,AR,CL,CO,UY]
	i = i + 1
print(max(b))

	
-- ERROR:
File "XXXX", line 24
    b = [BR,AR,CL,CO,UY]
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:58) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
t = zeros(5,dtype=int)
while (i < size(a)):
	if(a[i] == "BR"):
		t[0] = t[0]  + 1
		
	elif(a[i] == "AR"):
		t[1] = t[1] + 1
	elif(a[i] == "UY"):
		t[2] = t[2] + 1
	elif(a[i] == "CL"):
		t[3] = t[3] + 1
	elif(a[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1
print(max(t))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:37) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
BR = 0
AR = 0
UY = 0
CL = 0
CO = 0
i = 0
t = zeros(5,dtype=int)
while (i < size(a)):
	if(a[i] == "BR"):
		t[0] = t[0]  + 1
		
	elif(a[i] == "AR"):
		t[1] = t[1] + 1
	elif(a[i] == "UY"):
		t[2] = t[2] + 1
	elif(a[i] == "CL"):
		t[3] = t[3] + 1
	elif(a[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1
	b = max(t)
print(b)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:27) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
t = zeros(5,dtype=int)
while (i < size(a)):
	if(a[i] == "BR"):
		t[0] = t[0]  + 1
		
	elif(a[i] == "AR"):
		t[1] = t[1] + 1
	elif(a[i] == "UY"):
		t[2] = t[2] + 1
	elif(a[i] == "CL"):
		t[3] = t[3] + 1
	elif(a[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1
	b = max(t)
print(b)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:49) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")
t = zeros(5,dtype=int)
i = 0
while (i < size(a)):
	if(a[i] == "BR"):
		t[0] = t[0]  + 1
		
	elif(a[i] == "AR"):
		t[1] = t[1] + 1
	elif(a[i] == "UY"):
		t[2] = t[2] + 1
	elif(a[i] == "CL"):
		t[3] = t[3] + 1
	elif(a[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1
	b = max(t)
print(b)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:46) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
a = str(p).replace("'","")

i = 0
while (i < size(a)):
	t = zeros(5,dtype=int)
	if(a[i] == "BR"):
		t[0] = t[0]  + 1
	elif(a[i] == "AR"):
		t[1] = t[1] + 1
	elif(a[i] == "UY"):
		t[2] = t[2] + 1
	elif(a[i] == "CL"):
		t[3] = t[3] + 1
	elif(a[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1
	b = max(t)
print(b)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:30) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')


i = 0
while (i < size(p)):
	t = zeros(5,dtype=int)
	if(p[i] == "BR"):
		t[0] = t[0]  + 1
	elif(p[i] == "AR"):
		t[1] = t[1] + 1
	elif(p[i] == "UY"):
		t[2] = t[2] + 1
	elif(p[i] == "CL"):
		t[3] = t[3] + 1
	elif(p[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1
	b = max(t)
print(b)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:03) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')


i = 0
while (i < size(p)):
	t = zeros(5,dtype=int)
	if(p[i] == "BR"):
		t[0] = t[0]  + 1
	elif(p[i] == "AR"):
		t[1] = t[1] + 1
	elif(p[i] == "UY"):
		t[2] = t[2] + 1
	elif(p[i] == "CL"):
		t[3] = t[3] + 1
	elif(p[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1

print(b)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:08) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')


i = 0
while (i < size(p)):
	t = zeros(5,dtype=int)
	if(p[i] == "BR"):
		t[0] = t[0]  + 1
	elif(p[i] == "AR"):
		t[1] = t[1] + 1
	elif(p[i] == "UY"):
		t[2] = t[2] + 1
	elif(p[i] == "CL"):
		t[3] = t[3] + 1
	elif(p[i] == "CO"):
		t[4] = t[4] + 1
	
	i = i + 1


print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:57:17) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:41) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in p:
	if (p[i] == 'BR'):
		t[0] = t[0] + 1
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:43) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p):
	if (p[i] == 'BR'):
		t[0] = t[0] + 1
print(t)









	
-- ERROR:
File "XXXX", line 5
    for i in range(size(p):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:57) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'BR'):
		t[0] = t[0] + 1
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:04:34) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:04:50) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- EXECUTION TIME:
1.17824
-- TEST CASE 1:
---- input:
CO,BR,CO,CO,BR,AR,UY
---- correct output:
3
[1 2 0 3 1]
---- user output:
['CO', 'BR', 'CO', 'CO', 'BR', 'AR', 'UY']
3
[1 2 0 3 1]
-- TEST CASE 2:
---- input:
CL,BR,CL,AR,AR,AR,BR,BR,CO,UY,BR,CL,UY,CO,UY
---- correct output:
4
[3 4 3 2 3]
---- user output:
['CL', 'BR', 'CL', 'AR', 'AR', 'AR', 'BR', 'BR', 'CO', 'UY', 'BR', 'CL', 'UY', 'CO', 'UY']
4
[3 4 3 2 3]
-- TEST CASE 3:
---- input:
UY,CO,CO,AR,CL,UY
---- correct output:
2
[1 0 1 2 2]
---- user output:
['UY', 'CO', 'CO', 'AR', 'CL', 'UY']
2
[1 0 1 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:02) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:36) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:06:23) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- EXECUTION TIME:
1.03224
-- TEST CASE 1:
---- input:
CO,BR,CO,CO,BR,AR,UY
---- correct output:
3
[1 2 0 3 1]
---- user output:
['CO', 'BR', 'CO', 'CO', 'BR', 'AR', 'UY']
3
[1 2 0 3 1]
-- TEST CASE 2:
---- input:
CL,BR,CL,AR,AR,AR,BR,BR,CO,UY,BR,CL,UY,CO,UY
---- correct output:
4
[3 4 3 2 3]
---- user output:
['CL', 'BR', 'CL', 'AR', 'AR', 'AR', 'BR', 'BR', 'CO', 'UY', 'BR', 'CL', 'UY', 'CO', 'UY']
4
[3 4 3 2 3]
-- TEST CASE 3:
---- input:
UY,CO,CO,AR,CL,UY
---- correct output:
2
[1 0 1 2 2]
---- user output:
['UY', 'CO', 'CO', 'AR', 'CL', 'UY']
2
[1 0 1 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:07) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:11) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:08:34) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- EXECUTION TIME:
1.16869
-- TEST CASE 1:
---- input:
CO,BR,CO,CO,BR,AR,UY
---- correct output:
3
[1 2 0 3 1]
---- user output:
['CO', 'BR', 'CO', 'CO', 'BR', 'AR', 'UY']
3
[1 2 0 3 1]
-- TEST CASE 2:
---- input:
CL,BR,CL,AR,AR,AR,BR,BR,CO,UY,BR,CL,UY,CO,UY
---- correct output:
4
[3 4 3 2 3]
---- user output:
['CL', 'BR', 'CL', 'AR', 'AR', 'AR', 'BR', 'BR', 'CO', 'UY', 'BR', 'CL', 'UY', 'CO', 'UY']
4
[3 4 3 2 3]
-- TEST CASE 3:
---- input:
UY,CO,CO,AR,CL,UY
---- correct output:
2
[1 0 1 2 2]
---- user output:
['UY', 'CO', 'CO', 'AR', 'CL', 'UY']
2
[1 0 1 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:44) 
-- CODE:

p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = zeros(5,dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:08:48) 
-- CODE:

p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- EXECUTION TIME:
0.678365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1653/main.py", line 4, in <module>
    t = zeros(5,dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:51) 
-- CODE:

p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = zeros(5,dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:26) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:10:28) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5,dtype=float)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- EXECUTION TIME:
1.29166
-- TEST CASE 1:
---- input:
CO,BR,CO,CO,BR,AR,UY
---- correct output:
3
[1 2 0 3 1]
---- user output:
['CO', 'BR', 'CO', 'CO', 'BR', 'AR', 'UY']
3.0
[1. 2. 0. 3. 1.]
-- TEST CASE 2:
---- input:
CL,BR,CL,AR,AR,AR,BR,BR,CO,UY,BR,CL,UY,CO,UY
---- correct output:
4
[3 4 3 2 3]
---- user output:
['CL', 'BR', 'CL', 'AR', 'AR', 'AR', 'BR', 'BR', 'CO', 'UY', 'BR', 'CL', 'UY', 'CO', 'UY']
4.0
[3. 4. 3. 2. 3.]
-- TEST CASE 3:
---- input:
UY,CO,CO,AR,CL,UY
---- correct output:
2
[1 0 1 2 2]
---- user output:
['UY', 'CO', 'CO', 'AR', 'CL', 'UY']
2.0
[1. 0. 1. 2. 2.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:34) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5, dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:04) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')
print(p)
t = zeros(5, dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:11:40) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')

t = zeros(5, dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- EXECUTION TIME:
0.871009
-- TEST CASE 1:
---- input:
CO,BR,CO,CO,BR,AR,UY
---- correct output:
3
[1 2 0 3 1]
---- user output:
3
[1 2 0 3 1]
-- TEST CASE 2:
---- input:
CL,BR,CL,AR,AR,AR,BR,BR,CO,UY,BR,CL,UY,CO,UY
---- correct output:
4
[3 4 3 2 3]
---- user output:
4
[3 4 3 2 3]
-- TEST CASE 3:
---- input:
UY,CO,CO,AR,CL,UY
---- correct output:
2
[1 0 1 2 2]
---- user output:
2
[1 0 1 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:35:53) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')

t = zeros(5, dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:38:01) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')

t = zeros(5, dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:38:17) 
-- CODE:
from numpy import*
p = input("nacionalidades das pessoas: ").upper().split(',')

t = zeros(5, dtype=int)
for i in range(size(p)):
	if (p[i] == 'AR'):
		t[0] = t[0] + 1
	elif (p[i] == 'BR'):
		t[1] = t[1] + 1
	elif (p[i] == 'CL'):
		t[2] = t[2] + 1
	elif (p[i] == 'CO'):
		t[3] = t[3] + 1
	elif (p[i] == 'UY'):
		t[4] = t[4] + 1
print(max(t))	
print(t)









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
